rendered/envs/friclu/thanos/statefulset-thanos-receive.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: receive
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: thanos
    app.kubernetes.io/version: 0.39.2
    helm.sh/chart: thanos-17.3.1
  name: thanos-receive
  namespace: monitoring
spec:
  minReadySeconds: 0
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: receive
      app.kubernetes.io/instance: thanos
      app.kubernetes.io/name: thanos
  serviceName: thanos-receive-headless
  template:
    metadata:
      annotations:
        checksum/objstore-configuration: 3f7131e1fc92bc19b4b08f63a738eb4d195cf0553a530a48a737bb96da34ef8d
        checksum/receive-configuration: d81e47f16df9d7f4d682d01680c8c19edbe50ab6b1043049b8738554ca6e8768
      labels:
        app.kubernetes.io/component: receive
        app.kubernetes.io/instance: thanos
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: thanos
        app.kubernetes.io/version: 0.39.2
        helm.sh/chart: thanos-17.3.1
    spec:
      affinity:
        nodeAffinity: null
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/component: receive
                    app.kubernetes.io/instance: thanos
                    app.kubernetes.io/name: thanos
                topologyKey: kubernetes.io/hostname
              weight: 1
      automountServiceAccountToken: true
      containers:
        - args:
            - receive
            - --log.level=info
            - --log.format=logfmt
            - --grpc-address=0.0.0.0:10901
            - --http-address=0.0.0.0:10902
            - --remote-write.address=0.0.0.0:19291
            - --receive.capnproto-address=0.0.0.0:19391
            - --objstore.config=$(OBJSTORE_CONFIG)
            - --tsdb.path=/var/thanos/receive
            - --label=replica="$(NAME)"
            - --label=receive="true"
            - --tsdb.retention=15d
            - --receive.local-endpoint=127.0.0.1:10901
            - --receive.hashrings-file=/var/lib/thanos-receive/hashrings.json
            - --receive.replication-protocol=capnproto
            - --receive.replication-factor=1
          image: thanosio/thanos:v0.39.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /-/healthy
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          name: receive
          ports:
            - containerPort: 10901
              name: grpc
              protocol: TCP
            - containerPort: 10902
              name: http
              protocol: TCP
            - containerPort: 19291
              name: remote-write
              protocol: TCP
            - containerPort: 19391
              name: capnproto
              protocol: TCP
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /-/ready
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          resources:
            limits:
              ephemeral-storage: 2Gi
              memory: 1Gi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /var/lib/thanos-receive
              name: hashring-config
            - mountPath: /var/thanos/receive
              name: data
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      serviceAccountName: thanos-receive
      volumes:
        - configMap:
            name: thanos-receive
          name: hashring-config
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
