rendered/envs/friclu/thanos/service-thanos-query-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: query-frontend
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: thanos
    app.kubernetes.io/version: 0.39.2
    helm.sh/chart: thanos-17.3.1
  name: thanos-query-frontend
  namespace: monitoring
spec:
  ports:
    - name: http
      nodePort: null
      port: 9090
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: query-frontend
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/name: thanos
  type: ClusterIP
