rendered/envs/friclu/thanos/service-thanos-receive.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: receive
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: thanos
    app.kubernetes.io/version: 0.39.2
    helm.sh/chart: thanos-17.3.1
  name: thanos-receive
  namespace: thanos
spec:
  ports:
    - name: http
      nodePort: null
      port: 10902
      protocol: TCP
      targetPort: http
    - name: grpc
      nodePort: null
      port: 10901
      protocol: TCP
      targetPort: grpc
    - name: remote
      nodePort: null
      port: 19291
      protocol: TCP
      targetPort: remote-write
    - name: capnproto
      nodePort: null
      port: 19391
      protocol: TCP
      targetPort: capnproto
  selector:
    app.kubernetes.io/component: receive
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/name: thanos
  type: ClusterIP
