rendered/envs/friclu/thanos/service-thanos-ruler.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: ruler
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: thanos
    app.kubernetes.io/version: 0.39.2
    helm.sh/chart: thanos-17.3.1
  name: thanos-ruler
  namespace: thanos
spec:
  ports:
    - name: http
      nodePort: null
      port: 9090
      protocol: TCP
      targetPort: http
    - name: grpc
      nodePort: null
      port: 10901
      protocol: TCP
      targetPort: grpc
  selector:
    app.kubernetes.io/component: ruler
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/name: thanos
  type: ClusterIP
