rendered/envs/friclu/thanos/ingress-thanos-query-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: query-frontend
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: thanos
    app.kubernetes.io/version: 0.39.2
    helm.sh/chart: thanos-17.3.1
  name: thanos-query-frontend
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: thanos-query-frontend.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: thanos-query-frontend
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
