rendered/envs/friclu/thanos/networkpolicy-thanos-ruler.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: ruler
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: thanos
    app.kubernetes.io/version: 0.39.2
    helm.sh/chart: thanos-17.3.1
  name: thanos-ruler
  namespace: thanos
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 10902
        - port: 9090
        - port: 10901
        - port: 10901
  podSelector:
    matchLabels:
      app.kubernetes.io/component: ruler
      app.kubernetes.io/instance: thanos
      app.kubernetes.io/name: thanos
  policyTypes:
    - Ingress
    - Egress
